fixed background issue and miss alignment

--- a/flowerCard/flower.css
+++ b/flowerCard/flower.css
@@ -1,3 +1,13 @@
+*, *::before, *::after {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background-color: gray;
+}
+
 .card-container {
   width: min(100%, 1114px);
   display: flex;
